@@ -328,3 +328,5 @@ H	* Fixed a typo in 'conf/aman.conf-sample'.
 	* Stubbed out amanrmt(1) client.
 2022-03-07 Fred Gleason <fredg@paravelsystems.com>
 	* Got DB replication working in amanrmt(1).
+2022-03-07 Fred Gleason <fredg@paravelsystems.com>
+	* Got audio replication working in amanrmt(1).
